{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 12,
  "lineage": "b25c7f4b-0f7f-54d1-a362-8d120910e397",
  "resources": [
    {
      "mode": "data",
      "type": "aws_eip",
      "name": "sslip_io",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-03dd26cd1a11849a5",
            "domain": "vpc",
            "id": "eipalloc-099d09df1f73ec6a0",
            "instance_id": "i-0fa3c38079e17aba6",
            "network_interface_id": "eni-06f3602f19d297319",
            "network_interface_owner_id": "288053528466",
            "private_dns": "ip-10-241-0-10.ec2.internal",
            "private_ip": "10.241.0.10",
            "public_dns": "ec2-23-22-28-126.compute-1.amazonaws.com",
            "public_ip": "23.22.28.126",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "worker-3.nono.io"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sslip_io",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0947214b956697846",
            "arn": "arn:aws:ec2:us-east-1:288053528466:instance/i-0fa3c38079e17aba6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fa3c38079e17aba6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.micro",
            "ipv6_address_count": 1,
            "ipv6_addresses": [
              "2600:1f18:10f0:ae00::a"
            ],
            "key_name": "sslip_io",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06f3602f19d297319",
            "private_dns": "ip-10-241-0-10.ec2.internal",
            "private_ip": "10.241.0.10",
            "public_ip": "23.22.28.126",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-070bc93c53a1240d8",
                "volume_size": 26,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0873599b8da9efdf1",
            "tags": {
              "Name": "sslip_io Fedora 33 aarch64"
            },
            "tags_all": {
              "Name": "sslip_io Fedora 33 aarch64"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0efdcf6a4c82c962b"
            ]
          },
          "dependencies": [
            "aws_key_pair.sslip_io",
            "module.infra.aws_security_group.allow_everything",
            "module.infra.aws_subnet.sslip_io",
            "module.infra.aws_vpc.sslip_io"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "sslip_io",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288053528466:route-table/rtb-0aa808f80f7e7f981",
            "default_route_table_id": "rtb-0aa808f80f7e7f981",
            "id": "rtb-0aa808f80f7e7f981",
            "owner_id": "288053528466",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eb5dc7f16f13ada0",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eb5dc7f16f13ada0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0fdb66e157882db9a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra.aws_internet_gateway.sslip_io",
            "module.infra.aws_vpc.sslip_io"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sslip_io",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288053528466:internet-gateway/igw-0eb5dc7f16f13ada0",
            "id": "igw-0eb5dc7f16f13ada0",
            "owner_id": "288053528466",
            "vpc_id": "vpc-0fdb66e157882db9a"
          },
          "dependencies": [
            "module.infra.aws_vpc.sslip_io"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sslip_io",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f092f64b1ad73d8",
            "route_table_id": "rtb-0aa808f80f7e7f981",
            "subnet_id": "subnet-0873599b8da9efdf1"
          },
          "dependencies": [
            "module.infra.aws_default_route_table.sslip_io",
            "module.infra.aws_internet_gateway.sslip_io",
            "module.infra.aws_subnet.sslip_io",
            "module.infra.aws_vpc.sslip_io"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_everything",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288053528466:security-group/sg-0efdcf6a4c82c962b",
            "description": "we are bold, we are brave, we are naked (as far as firewalls are concerned)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0efdcf6a4c82c962b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_everything",
            "name_prefix": "",
            "owner_id": "288053528466",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_everything"
            },
            "tags_all": {
              "Name": "allow_everything"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdb66e157882db9a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra.aws_vpc.sslip_io"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sslip_io",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288053528466:subnet/subnet-0873599b8da9efdf1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.241.0.0/24",
            "id": "subnet-0873599b8da9efdf1",
            "ipv6_cidr_block": "2600:1f18:10f0:ae00::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-094915e04f2621656",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "288053528466",
            "tags": {
              "Name": "sslip_io"
            },
            "tags_all": {
              "Name": "sslip_io"
            },
            "vpc_id": "vpc-0fdb66e157882db9a"
          },
          "dependencies": [
            "module.infra.aws_vpc.sslip_io"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sslip_io",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288053528466:vpc/vpc-0fdb66e157882db9a",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.241.0.0/16",
            "default_network_acl_id": "acl-02c9eb1783678d8ba",
            "default_route_table_id": "rtb-0aa808f80f7e7f981",
            "default_security_group_id": "sg-0de372aae11813b23",
            "dhcp_options_id": "dopt-63836a06",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0fdb66e157882db9a",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-097b2e6a966b6a1b4",
            "ipv6_cidr_block": "2600:1f18:10f0:ae00::/56",
            "main_route_table_id": "rtb-0aa808f80f7e7f981",
            "owner_id": "288053528466",
            "tags": {
              "Name": "sslip_io"
            },
            "tags_all": {
              "Name": "sslip_io"
            }
          }
        }
      ]
    }
  ]
}